@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix selection of collapsed thread rows (#1488772)
 - Always save drafts with format=flowed in order to keep original line wraps (#1488799)
 - Fix wrapping of quoted text with format=flowed (#1488177)
 - Select default_addressbook on the list in Address Book (#1488280)
